--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
     "react-dom": "^17.0.2",
     "react-test-render": "^1.1.2",
     "react-test-renderer": "^17.0.2"
+  },
+  "jest": {
+      "collectCoverageFrom": [
+          "src/**/*.js",
+          "!src/index.js"
+      ]
   }
 }
